PSP/borradores/ae/jwt/TVREST-AdrianSaavedra/src/main/java/org/example/tvrestadriansaavedra/common/errors/UserAlreadyExistsException.java
package org.example.tvrestadriansaavedra.common.errors;

public class UserAlreadyExistsException extends RuntimeException {
    public UserAlreadyExistsException(String message) {
        super(message);
    }
}
